--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,7 @@
   <parent>
     <artifactId>commands-pom</artifactId>
     <groupId>com.peergreen.shelbie</groupId>
-    <version>1.0-SNAPSHOT</version>
-    <relativePath>../commands-pom/pom.xml</relativePath>
+    <version>1.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -47,9 +46,24 @@
     <dependency>
       <groupId>org.ow2.shelbie</groupId>
       <artifactId>shelbie-command-testing</artifactId>
-      <version>2.0.0-M3-SNAPSHOT</version>
+      <version>2.0.0-M3</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>peergreen.release</id>
+      <name>Peergreen Release Nexus</name>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <url>https://forge.peergreen.com/nexus/content/repositories/releases/</url>
+      <layout>default</layout>
+    </repository>
+  </repositories>
 
 </project>
